refactor: Trim viewable content

--- a/content/projects/test-project.mdx
+++ b/content/projects/test-project.mdx
@@ -9,7 +9,7 @@ link: "https://github.com/Milind220"
 
 # Test Project
 
-This is a sample project to demonstrate how projects appear on the website. 
+Sample project to demonstrate how projects will appear on the website. 
 
 ## Features
 
@@ -20,6 +20,5 @@ This is a sample project to demonstrate how projects appear on the website.
 
 ## Implementation Details
 
-This project serves as a placeholder to test how projects are displayed on both the home page and the projects page. The technologies listed are just examples and don't reflect actual implementation.
+Placeholder
 
-Feel free to replace this with a real project when you're ready!
